# ml_prakt_5

./: .pre-commit-comfig.yaml  .pre-commit-config.yaml  5 prakt.ipynb  README.md  edu.pyoop.code-workspace  flights.parquet  pyproject.toml  table_1.json
pract tasks/individ tasks/: flights.py  main.py  storage.py  validators.py
src/: flights.parquet  flights.py  main.py  storage.py  validators.py
tests/: test_flights.py  test_main.py  test_storage.py  test_validators.py
практические задания/индивидуальное задание/: flights.parquet  flights.py
примеры/: 5 primeri.ipynb
файлы созданные в процессе работы/: table.html
