[project]
name = "flight-manager"
version = "0.1.0"
description = "Flight management system"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "timur", email = "your.email@example.com"}
]
dependencies = [
    "pandas>=2.0.0",
    "pyarrow>=10.0.0"
]

[build-system]
requires = ["setuptools>=65.5.1", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-v"